files/jobtracker.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: job-tracker
  namespace: spark-jobs
spec:
  containers:
  - command:
    - python3.8
    - -m
    - openeogeotrellis.job_tracker
    - --principal
    - ""
    - --keytab
    - ""
    image: vito-docker.artifactory.vgt.vito.be/openeo-geotrellis-kube:latest
    name: job-tracker
  restartPolicy: Never
  serviceAccountName: openeo
