files/shs_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ingress
  namespace: spark-history
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/hist)$ $1/ permanent;

spec:
  tls:
  - hosts: 
      - gvino.test.fedcloud.eu
    secretName: openeocert
  rules:
    - host: gvino.test.fedcloud.eu
      http:
        paths:
          - path: /hist(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name:  mysparkhistory-spark-history-server 
                port:
                  number: 18080
